// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default render 1`] = `
.c0 {
  font-size: 16px;
  padding: 6px 12px;
  border-radius: 4px;
  cursor: pointer;
  color: #ffffff;
  background-color: #00007f;
  border: 1px solid #00007f;
}

.c0:hover {
  background-color: #000066;
}

<button
  className="c0"
/>
`;

exports[`Button renders custom colors 1`] = `
.c0 {
  font-size: 16px;
  padding: 6px 12px;
  border-radius: 4px;
  cursor: pointer;
  color: #123456;
  background-color: #234567;
  border: 1px solid #234567;
}

.c0:hover {
  background-color: #0a2c4e;
}

<button
  className="c0"
/>
`;

exports[`Button renders primary 1`] = `
.c0 {
  font-size: 16px;
  padding: 6px 12px;
  border-radius: 4px;
  cursor: pointer;
  color: #ffffff;
  background-color: #0000ff;
  border: 1px solid #0000ff;
}

.c0:hover {
  background-color: #0000e6;
}

<button
  className="c0"
/>
`;

exports[`Button renders transparent bg 1`] = `
.c0 {
  font-size: 16px;
  padding: 6px 12px;
  border-radius: 4px;
  cursor: pointer;
  color: #123456;
  background-color: transparent;
  border: 1px solid transparent;
}

.c0:hover {
  background-color: #e6e6e6;
}

<button
  className="c0"
/>
`;
